Back to labs as includes in appendix

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,14 +1,11 @@
 project:
   type: book
 
-crossref:
-  appendix-title: "Lab"
-  appendix-delim: ":"
-
 book:
   title: "Ecological theory for the biodiversity crisis"
   author: "Henrique Miguel Pereira"
   date: today
+  page-navigation: true
   chapters:
     - index.qmd
     - part: "Ecology of individuals"
@@ -18,13 +15,8 @@ book:
       chapters:
         - demography.qmd
   appendices:
-    - part: "Computational labs"
-      chapters:
-      - labs/Lab1_climatespace.qmd
-      - labs/Lab2_optimalforaging.qmd
-    - part: "R tutorials"
-      chapters:
-      - intro_to_R.qmd
+    - intro_to_R.qmd
+    - labs.qmd
   #  - references.qmd
 
 bibliography: references.bib
