--- a/_quarto.yml
+++ b/_quarto.yml
@@ -47,5 +47,5 @@ format:
 
 editor: visual
 
-#execute:
-#  freeze: auto  # re-render only when source changes
+execute:
+  freeze: auto  # re-render only when source changes
