--- a/_quarto.yml
+++ b/_quarto.yml
@@ -28,7 +28,7 @@ bibliography: references.bib
 format:
   html:
     theme: cosmo
-    cover-image: "images/ValeCastroPanoramaBook.jpg"
+    cover-image: "images/BookCover.png"
   titlepage-pdf:
     documentclass: book
     classoption: ["oneside", "open=any"]
