--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,6 +14,8 @@ book:
       chapters:
         - ecophysiology.qmd
         - optimalforaging.qmd
+        - gametheory.qmd
+        - movement.qmd
     - part: "Ecology of populations"
       chapters:
         - demography.qmd
@@ -23,7 +25,6 @@ book:
   appendices:
     - intro_to_R.qmd
     - labs.qmd
-    - labs_tutorials.qmd
   #  - labs_solutions.qmd     currently empty
   #  - references.qmd
 
